--- a/app/SettingsWidget.ui
+++ b/app/SettingsWidget.ui
@@ -17,10 +17,10 @@
    <widget class="QWidget" name="gridLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>390</x>
-      <y>70</y>
-      <width>331</width>
-      <height>391</height>
+      <x>330</x>
+      <y>90</y>
+      <width>443</width>
+      <height>471</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
@@ -35,7 +35,7 @@
        <property name="font">
         <font>
          <family>Comic Sans MS</family>
-         <pointsize>10</pointsize>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -51,7 +51,7 @@
        <property name="font">
         <font>
          <family>Comic Sans MS</family>
-         <pointsize>10</pointsize>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -64,6 +64,11 @@
      </item>
      <item row="10" column="2">
       <widget class="QSpinBox" name="gameboardSize">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
@@ -71,7 +76,7 @@
         <number>6</number>
        </property>
        <property name="maximum">
-        <number>35</number>
+        <number>30</number>
        </property>
        <property name="value">
         <number>24</number>
@@ -83,7 +88,7 @@
        <property name="font">
         <font>
          <family>Comic Sans MS</family>
-         <pointsize>10</pointsize>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -96,17 +101,22 @@
      </item>
      <item row="11" column="2">
       <widget class="QSpinBox" name="maxDots">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
        <property name="minimum">
-        <number>35</number>
+        <number>25</number>
        </property>
        <property name="maximum">
         <number>100</number>
        </property>
        <property name="value">
-        <number>50</number>
+        <number>40</number>
        </property>
       </widget>
      </item>
@@ -115,7 +125,7 @@
        <property name="font">
         <font>
          <family>Comic Sans MS</family>
-         <pointsize>10</pointsize>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -147,7 +157,7 @@
        <property name="font">
         <font>
          <family>Comic Sans MS</family>
-         <pointsize>10</pointsize>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -160,6 +170,11 @@
      </item>
      <item row="0" column="2">
       <widget class="QSpinBox" name="timeLimit">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
@@ -176,22 +191,32 @@
      </item>
      <item row="12" column="2">
       <widget class="QSpinBox" name="maxBridges">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
        <property name="minimum">
-        <number>35</number>
+        <number>10</number>
        </property>
        <property name="maximum">
         <number>100</number>
        </property>
        <property name="value">
-        <number>50</number>
+        <number>40</number>
        </property>
       </widget>
      </item>
      <item row="7" column="2">
       <widget class="QComboBox" name="gamemodeOption">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <item>
         <property name="text">
          <string>Default</string>
@@ -242,11 +267,16 @@
    <widget class="QPushButton" name="backToMenuButton">
     <property name="geometry">
      <rect>
-      <x>480</x>
-      <y>480</y>
-      <width>225</width>
-      <height>24</height>
+      <x>440</x>
+      <y>570</y>
+      <width>231</width>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>Go back to main menu</string>
@@ -255,10 +285,10 @@
    <widget class="QWidget" name="gridLayoutWidget_2">
     <property name="geometry">
      <rect>
-      <x>-20</x>
+      <x>20</x>
       <y>150</y>
       <width>331</width>
-      <height>391</height>
+      <height>501</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_2">
@@ -276,6 +306,11 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="maxLength">
         <number>10</number>
        </property>
@@ -289,7 +324,7 @@
        <property name="font">
         <font>
          <family>Comic Sans MS</family>
-         <pointsize>10</pointsize>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -308,6 +343,11 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="maxLength">
         <number>10</number>
        </property>
@@ -321,7 +361,7 @@
        <property name="font">
         <font>
          <family>Comic Sans MS</family>
-         <pointsize>10</pointsize>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -353,8 +393,8 @@
    <widget class="QLabel" name="timeLimitLabel_2">
     <property name="geometry">
      <rect>
-      <x>660</x>
-      <y>130</y>
+      <x>700</x>
+      <y>160</y>
       <width>161</width>
       <height>20</height>
      </rect>
@@ -362,7 +402,7 @@
     <property name="font">
      <font>
       <family>Comic Sans MS</family>
-      <pointsize>7</pointsize>
+      <pointsize>9</pointsize>
      </font>
     </property>
     <property name="text">
@@ -379,7 +419,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>22</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
